Bug 134913 - Relative table setting lost (gets absolute again)
Summary: Relative table setting lost (gets absolute again)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0
Keywords:
Depends on:
Blocks: Writer-Table-Styles
  Show dependency treegraph
 
Reported: 2020-07-17 21:17 UTC by Telesto
Modified: 2020-08-05 12:47 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (9.10 KB, application/vnd.oasis.opendocument.text)
2020-07-17 21:18 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-07-17 21:17:55 UTC
Description:
Relative table setting lost (gets absolute again) 

Steps to Reproduce:
1. Open the attached file
2. Table -> Properties -> Go to table tab
3. Table -> Properties -> Go to column tab
4. Type 25 in width Column 1 
5. Press OK
6. Table -> Properties -> table tab -> Relative setting unchecked

Actual Results:
Relative setting unchecked

Expected Results:
Still relative


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
7.1

Version: 6.0.5.0.0+
Build ID: 15ea1cda0b3c37ff944ad9a239b7ed453e8b0591
CPU threads: 4; OS: Windows 6.3; UI render: default; 
Locale: nl-NL (nl_NL); Calc: CL

and in
4.4.7.2

and in
4.1

and in
3.3.0
Comment 1 Telesto 2020-07-17 21:18:08 UTC
Created attachment 163210 [details]
Example file
Comment 2 Xisco Faulí 2020-08-03 16:23:39 UTC
Reproduced in

Version: 7.1.0.0.alpha0+
Build ID: 32090b018d9ff81659a4c9ed41c64109ebebe4fc
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 3 Telesto 2020-08-04 10:19:19 UTC
@Caolan
As are already looking into they table dialog code, you might be interested in this
Comment 4 Caolán McNamara 2020-08-05 11:04:47 UTC
it looks like if the the width of the table changes from the size it was when in relative mode, it toggles out of relative mode and changing the column widths due to rounding in this case after setting the table width the column widths are set which results in a slight change of the table width causing it to to out of relative mode. Moving the table width setting to just after the column width setting makes it stick, and I don't see any obvious unwanted side effects on doing that.
Comment 5 Commit Notification 2020-08-05 12:46:03 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/76c40b82e6a44539cd43f326c00246e759449571

tdf#134913 set table width after setting columns

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.