tdf#134913 set table width after setting columns

so "relative" mode sticks regardless of any rounding issues triggering
the table out of relative mode.

Change-Id: If0abbf2ef75feb6fc4a408966c2a3c350589023f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/100161
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>